# GoIt_Web_HW_8

./: hw.py  pyproject.toml
part_2/: consumer.py  models.py  producer.py
