[tool.poetry]
name = "goit-web-hw-8"
version = "0.1.0"
description = ""
authors = ["filinmbg <filinmbg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
certifi = "^2023.7.22"
faker = "^20.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
